{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 465,
  "lineage": "59a7252c-22f6-13df-e0b4-2729dc6813d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c7d01cf4dedc891",
            "arn": "arn:aws:ec2:us-east-1:160627668872:instance/i-04560cb20db877c64",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-fleet-profile",
            "id": "i-04560cb20db877c64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jumpserver-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0534afc4035a8b4f1",
            "private_dns": "ip-10-0-0-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.35",
            "public_dns": "ec2-44-203-106-192.compute-1.amazonaws.com",
            "public_ip": "44.203.106.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e306df7d2d804fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f6db6516587cdfe",
            "tags": {
              "Name": "jump-server-default"
            },
            "tags_all": {
              "Name": "jump-server-default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03979314b78ce1932"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_key_pair.this",
            "aws_security_group.jump-server",
            "data.aws_ami.ami",
            "module.networking.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:security-group/sg-03979314b78ce1932",
            "description": "Allow traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03979314b78ce1932",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jump-server",
            "name_prefix": "",
            "owner_id": "160627668872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jump-server"
            },
            "tags_all": {
              "Name": "jump-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:route-table/rtb-06e2a9fa1037e22a6",
            "default_route_table_id": "rtb-06e2a9fa1037e22a6",
            "id": "rtb-06e2a9fa1037e22a6",
            "owner_id": "160627668872",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0070970b47a88192a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": ""
            },
            "tags_all": {
              "Name": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.natgw",
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c49f6419ecff54f",
            "association_id": "eipassoc-01fe711de868c2c88",
            "domain": "vpc",
            "id": "eipalloc-02c49f6419ecff54f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d18d33e3f7f690b1",
            "private_dns": "ip-10-0-0-244.ec2.internal",
            "private_ip": "10.0.0.244",
            "public_dns": "ec2-34-230-202-54.compute-1.amazonaws.com",
            "public_ip": "34.230.202.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:internet-gateway/igw-0f8d81b43901ef2d8",
            "id": "igw-0f8d81b43901ef2d8",
            "owner_id": "160627668872",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c49f6419ecff54f",
            "connectivity_type": "public",
            "id": "nat-0070970b47a88192a",
            "network_interface_id": "eni-0d18d33e3f7f690b1",
            "private_ip": "10.0.0.244",
            "public_ip": "34.230.202.54",
            "subnet_id": "subnet-05f6db6516587cdfe",
            "tags": {
            },
            "tags_all": {
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:route-table/rtb-0dc4bc9b92563e531",
            "id": "rtb-0dc4bc9b92563e531",
            "owner_id": "160627668872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8d81b43901ef2d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": ""
            },
            "tags_all": {
              "Name": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01083b26c7c6ce33d",
            "route_table_id": "rtb-0dc4bc9b92563e531",
            "subnet_id": "subnet-05f6db6516587cdfe"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.njemo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05adbd626ea5cd708",
            "route_table_id": "rtb-0dc4bc9b92563e531",
            "subnet_id": "subnet-085b3283415a9ee76"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:subnet/subnet-02aa4b303155b30ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aa4b303155b30ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160627668872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:subnet/subnet-05c1fea6c9348467c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.33.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c1fea6c9348467c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160627668872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:subnet/subnet-03c61b2fe342e4f38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c61b2fe342e4f38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160627668872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:subnet/subnet-032f4f64c1895c4bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032f4f64c1895c4bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160627668872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:subnet/subnet-05f6db6516587cdfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f6db6516587cdfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160627668872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:subnet/subnet-085b3283415a9ee76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085b3283415a9ee76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160627668872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
            },
            "tags_all": {
            },
            "vpc_id": "vpc-0264923a31b8bb361"
          },
          "dependencies": [
            "module.networking.aws_vpc.njemo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "njemo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160627668872:vpc/vpc-0264923a31b8bb361",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e861e99bcc2fd1df",
            "default_route_table_id": "rtb-06e2a9fa1037e22a6",
            "default_security_group_id": "sg-0ccfe86accc6e8e80",
            "dhcp_options_id": "dopt-034a013fd1caf619c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0264923a31b8bb361",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e2a9fa1037e22a6",
            "owner_id": "160627668872",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}